@@ -24,7 +24,7 @@ from pyramid.compat import (
     )
 
 from pyramid.decorator import reify
-from pyramid.i18n import get_localizer
+from pyramid.i18n import LocalizerRequestMixin
 from pyramid.response import Response
 from pyramid.url import URLMethodsMixin
 from pyramid.util import InstancePropertyMixin
@@ -303,7 +303,8 @@ class CallbackMethodsMixin(object):
 
 @implementer(IRequest)
 class Request(BaseRequest, DeprecatedRequestMethodsMixin, URLMethodsMixin,
-              CallbackMethodsMixin, InstancePropertyMixin):
+              CallbackMethodsMixin, InstancePropertyMixin,
+              LocalizerRequestMixin):
     """
     A subclass of the :term:`WebOb` Request class.  An instance of
     this class is created by the :term:`router` and is provided to a
@@ -384,13 +385,7 @@ class Request(BaseRequest, DeprecatedRequestMethodsMixin, URLMethodsMixin,
     def json_body(self):
         return json.loads(text_(self.body, self.charset))
 
-    @reify
-    def localizer(self):
-        """ Convenience property to return a localizer by calling
-            :func:`pyramid.i18n.get_localizer`. """
-        return get_localizer(self)
-
-
+    
 def route_request_iface(name, bases=()):
     # zope.interface treats the __name__ as the __doc__ and changes __name__
     # to None for interfaces that contain spaces if you do not pass a
